[package]
name = "tictactoe_server"
version = "0.1.0"
authors = ["rogday <rogday@test.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.0",  features = ["full"] }
tokio-util = { version = "0.2.0", features = ["full"] }
futures = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
#either = "1.5.3"