[package]
name = "tictactoe_server"
version = "0.1.0"
authors = ["rogday <rogday@test.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#async shit
tokio = { version = "0.2.15",  features = ["full"] }
tokio-util = { version = "0.3.1", features = ["full"] }
futures = "0.3.4"

#serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#utils
once_cell = "1.3.1"
env_logger = "0.7.1"
log = "0.4.8"